--- a/OOP JanuaryExam/MainWindow.xaml
+++ b/OOP JanuaryExam/MainWindow.xaml
@@ -7,6 +7,82 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100*"/>
+            <RowDefinition Height="100*"/>
+            <RowDefinition Height="100*"/>
+            <RowDefinition Height="100*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="300*"/>
+            <ColumnDefinition Width="300*"/>
+            <ColumnDefinition Width="300*"/>
+        </Grid.ColumnDefinitions>
+
+        <Label Content="Filter" HorizontalAlignment="Center" Height="49" Margin="56,0,0,0" VerticalAlignment="Center" Width="130" FontSize="30"/>
+        <Label Grid.Column="1" Content="Robot List" HorizontalAlignment="Center" Height="69" Margin="39,30,0,0" VerticalAlignment="Top" Width="169" FontSize="30"/>
+        <Label Grid.Column="2" Content="Robot Details" HorizontalAlignment="Center" Height="69" Margin="39,0,0,0" VerticalAlignment="Center" Width="174" FontSize="30"/>
+
+       
+        <RadioButton x:Name="AllRadio"
+                     Content="All"
+                     HorizontalAlignment="Left"
+                     Height="22"
+                     Margin="39,54,0,0"
+                     Grid.Row="1"
+                     VerticalAlignment="Top"
+                     Width="147"
+                     GroupName="FilterGroup"
+                     Checked="FilterRadio_Checked"/>
+
+        <RadioButton x:Name="HouseholdRadio"
+                     Content="Household"
+                     HorizontalAlignment="Left"
+                     Height="22"
+                     Margin="39,42,0,0"
+                     Grid.Row="2"
+                     VerticalAlignment="Top"
+                     Width="147"
+                     GroupName="FilterGroup"
+                     Checked="FilterRadio_Checked"/>
+
+        <RadioButton x:Name="DeliveryRadio"
+                     Content="Delivery"
+                     HorizontalAlignment="Left"
+                     Height="22"
+                     Margin="39,32,0,0"
+                     Grid.Row="3"
+                     VerticalAlignment="Top"
+                     Width="147"
+                     GroupName="FilterGroup"
+                     Checked="FilterRadio_Checked"/>
+
+       
+        <ListBox x:Name="RobotListBox"
+                 Grid.Column="1"
+                 Grid.Row="1"
+                 Grid.RowSpan="3"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 Margin="49,27,0,0"
+                 Width="173"
+                 Height="244"
+                 DisplayMemberPath="RobotName"
+                 ItemsSource="{Binding Robots}"
+                 SelectedItem="{Binding SelectedRobot, Mode=TwoWay}" />
+
         
+        <TextBox x:Name="DetailsTextBox"
+                 Grid.Column="2"
+                 Grid.Row="1"
+                 Grid.RowSpan="3"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 Margin="34,27,0,0"
+                 Width="190"
+                 Height="244"
+                 TextWrapping="Wrap"
+                 IsReadOnly="True"
+                 Text="{Binding SelectedRobot.Description}" />
     </Grid>
 </Window>
